@@ -14,10 +14,11 @@ class DoubanOAuth2Adapter(OAuth2Adapter):
     profile_url = 'https://api.douban.com/v2/user/~me'
 
     def complete_login(self, request, app, token, **kwargs):
-        headers = {'Authorization':'Bearer %s' % token.token}
+        headers = {'Authorization': 'Bearer %s' % token.token}
         resp = requests.get(self.profile_url, headers=headers)
         extra_data = resp.json()
-        return self.get_provider().sociallogin_from_response(request, extra_data)
+        return self.get_provider().sociallogin_from_response(
+            request, extra_data)
 
 
 oauth2_login = OAuth2LoginView.adapter_view(DoubanOAuth2Adapter)
