@@ -55,6 +55,7 @@ INSTALLED_APPS = (
     'allauth.socialaccount.providers.bitbucket',
     'allauth.socialaccount.providers.bitly',
     'allauth.socialaccount.providers.coinbase',
+    'allauth.socialaccount.providers.douban',
     'allauth.socialaccount.providers.dropbox',
     'allauth.socialaccount.providers.feedly',
     'allauth.socialaccount.providers.facebook',
