@@ -1,3 +1,7 @@
+2015-02-12  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* guoqiao contribued a provider for Douban, thanks!
+
 2015-02-05  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Version 0.19.1 released.
